[gd_scene load_steps=7 format=3 uid="uid://c7do4frwkm1gj"]

[ext_resource type="Texture2D" uid="uid://cme67iy62nc8v" path="res://Sprite-0002.png" id="2_5036n"]
[ext_resource type="PackedScene" uid="uid://cagrbpd4chouv" path="res://stripeelproper.tscn" id="3_1uv3d"]
[ext_resource type="Script" path="res://ui2/button.gd" id="3_p172q"]
[ext_resource type="FontFile" uid="uid://ghb8remxneqc" path="res://fonts/8-bit Arcade In.ttf" id="4_b44ym"]
[ext_resource type="Shader" uid="uid://ydsify6347cs" path="res://invert.gdshader" id="4_wp7s7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ibog1"]
shader = ExtResource("4_wp7s7")

[node name="button" type="TextureButton"]
custom_minimum_size = Vector2(330, 25)
offset_right = 330.0
offset_bottom = 25.0
script = ExtResource("3_p172q")
destination = Vector2(20, 0)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
clip_children = 2
offset_right = 330.22
offset_bottom = 25.0
texture = ExtResource("2_5036n")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Sprite2D3" parent="NinePatchRect" instance=ExtResource("3_1uv3d")]
position = Vector2(83, 0)
rotation = 3.14159
scale = Vector2(3, 3)
region_rect = Rect2(0, 0, 300, 12)

[node name="NinePatchRect3" type="NinePatchRect" parent="."]
clip_children = 2
material = SubResource("ShaderMaterial_ibog1")
offset_right = 330.22
offset_bottom = 25.0
texture = ExtResource("2_5036n")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 4.0
offset_right = 176.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_b44ym")
theme_override_font_sizes/font_size = 16
text = "Options"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
